--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="site">ACESSAR NOSSO SITE</div>
     </a>
     
-        <a href='whatsapp://send?text=Precisando ligar pra gente e não lembra o número? Salve o link de nosso CVM em seu celular.Tenha acesso ao nosso Telefone, WhatsApp e E-mail a um toque! http://bit.ly/rop1engenharia'>
+        <a href='whatsapp://send?text=*Cartão de Visitas Mobile - Rop Engenharia:* http://www.rop1engenharia.meucvm.com.br'>
         <div id="divcompartilhar">COMPARTILHAR ROP ENGENHARIA
         </div>
     </a>
