--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113411563-4"></script>
     <script>
@@ -14,17 +15,18 @@
 
         gtag('config', 'UA-113411563-4');
     </script>
+
     <meta charset="UTF-8">
     <meta name="language" content="pt-br">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta property="og:title" content="ROP ENGENHARIA E SOLUÇÕES">
     <meta property="og:image" content="http://uploaddeimagens.com.br/images/001/275/962/original/avatarrop1.png?1517660230">
 
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>ROP ENGENHARIA E SOLUÇÕES</title>
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/stilo.css">
-
     <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
@@ -35,33 +37,114 @@
 </head>
 
 <body>
+    <div class="container-fluid divcenter">
 
-    <img src="img/logo.png" alt="logotipo" class="logo">
-
-
-    <a href="https://api.whatsapp.com/send?phone=5562982100910" target="_blank">
-        <div id="divzapzap">ORÇAMENTOS ENG. RODRIGO
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="2500">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/1.png" class="img-fluid logo" alt="Responsive image">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/2.png" class="img-fluid logo" alt="Responsive image">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
         </div>
-    </a>
-    <a href="tel:062981155756 ">
-        <div id="divtel">TELEFONAR
+
+
+        <div class="divconteudo">
+            <a href="https://api.whatsapp.com/send?phone=5562982100910" target="_blank">
+                <div class="btn btn-success divlinks zapzapcolor"><i class="fab fa-whatsapp icon"></i> WhatsApp Eng. Rodrigo
+                </div>
+            </a>
         </div>
-    </a>
 
-    <a href="http://www.ropengenharia.com" target="_blank">
-        <div class="site">ACESSAR NOSSO SITE</div>
-    </a>
-
-    <a href='whatsapp://send?text=*Cartão de Visitas Mobile - ROP Engenharia:* http://rop1engenharia.meucvm.com.br'>
-        <div id="divcompartilhar">COMPARTILHAR ROP ENGENHARIA
+        <div class="divconteudo">
+            <a href="mailto:contato@ropengenharia.com" target="_blank">
+                <div class="btn btn-secondary divlinks mail"><i class="fas fa-envelope"></i> Enviar e-mail</div>
+            </a>
         </div>
-    </a>
 
-    <a href="http://cartaodevisitasmobile.com.br" target="_blank">
-        <div class="propaganda">by cartaodevisitasmobile.com.br</div>
-    </a>
+        <div class="divconteudo">
+            <a href="http://www.ropengenharia.com" target="_blank">
+                <div class="btn btn-secondary divlinks site"><i class="fab fa-internet-explorer"></i> Site</div>
+            </a>
+        </div>
 
-    -
+
+
+        <!--
+        <div class="divconteudo">
+            <a href="link" target="_blank">
+                <div class="btn btn-danger divlinks instacolor"><i class="fab fa-instagram icon"></i> Instagram
+                </div>
+            </a>
+        </div>
+
+        <div class="divconteudo">
+            <a href="link" target="_blank">
+                <div class="btn btn-primary divlinks facecolor"><i class="fab fa-facebook-square icon"></i> Facebook
+                </div>
+            </a>
+        </div>
+
+        <div class="divconteudo">
+            <a href="linklocalizacao" target="_blank">
+                <div class="btn btn-info divlinks"><i class="fas fa-map-marker-alt icon"></i> Localização
+                </div>
+            </a>
+        </div>
+
+        <div class="divconteudo">
+            <a href="https://drive.google.com/" target="_blank">
+                <div class="btn btn-secondary divlinks geral">Nossos produtos</div>
+            </a>
+        </div>
+-->
+        <div class="divconteudo">
+            <a href="tel:062981155756" target="_blank">
+                <div class="btn btn-secondary divlinks geral">Telefone</div>
+            </a>
+        </div>
+
+
+        <!--
+        <div class="divconteudo">
+            <a href="link" target="_blank">
+                <div class="btn btn-secondary divlinks geral">Youtube</div>
+            </a>
+        </div>
+-->
+
+
+        <div class="divconteudo">
+            <a href="contacts.vcf" target="_blank">
+                <div class="btn btn-secondary divlinks geral">Adicionar contato</div>
+            </a>
+        </div>
+
+        <div class="divconteudo">
+            <a href='whatsapp://send?text=*Cartão de Visitas Mobile - ROP Engenharia:* http://rop1engenharia.meucvm.com.br'>
+                <div class="btn btn-secondary divlinks geral">Indicar ROP Engenharia</div>
+            </a>
+        </div>
+
+        <div class="divpropaganda">
+            <a href="http://www.cartaodevisitasmobile.com.br" id="link" target="_blank">by cartaodevisitasmobile.com.br</a>
+
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
